changed order fields in modals, table of books, format isbn in table

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,29 +2,15 @@
 
   <div class="main-panel">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
-      <div class="container-fluid justify-content-center">
-        <div class="navbar-wrapper">
-          <a class="navbar-brand" routerLink="main">Main</a>
-          <em class="material-icons">home</em>
-        </div>
+    <nav class="mb-3 ">
+      <div class="navbar navbar-expand navbar-light justify-content-center">
+        <a class="navbar-brand" routerLink="main">Main</a>
+        <a class="navbar-brand" routerLink="authors">Authors</a>
+        <a class="navbar-brand" routerLink="books">Books</a>
+        <a class="navbar-brand" routerLink="reviews">Reviews</a>
         <button aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-toggle="collapse" type="button">
         </button>
-        <div class="navbar-wrapper">
-          <a class="navbar-brand" routerLink="authors">Authors</a>
-          <em class="material-icons">people</em>
-        </div>
-
-        <div class="navbar-wrapper">
-          <a class="navbar-brand" routerLink="books">Books</a>
-          <em class="material-icons">books</em>
-        </div>
-
-        <div class="navbar-wrapper">
-          <a class="navbar-brand" routerLink="reviews">Reviews</a>
-          <em class="material-icons">announcement</em>
-        </div>
       </div>
     </nav>
     <!-- End Navbar -->
