--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -193,8 +193,8 @@
                    minlength="1" maxlength="256" required>
           </div>
           <div class="form-group col-6" style="float: right">
-            <label for="yearOfPublisher">Year of publisher</label>
-            <input type="number" ngModel name="yearOfPublisher" class="form-control" id="yearOfPublisher"
+            <label for="yearOfPublisher">Year</label>
+            <input type="number" ngModel name="yearPublisher" class="form-control" id="yearOfPublisher"
                    placeholder="year of publisher" min="1" max="{{currentYear}}">
           </div>
           <div class="form-group col-6">
